tests/snapshots/examples_fixtures/primop__primop_builtin_bridge.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/primop_builtin_bridge.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
