tests/snapshots/examples_fixtures/primop__string_and_effects.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/string_and_effects.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
