tests/snapshots/examples_fixtures/primop__strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
